logs/twistml.log
Listing '.'...
Listing './bin'...
Compiling './bin/tml-filter-catlang.py'...
***   File "./bin/tml-filter-catlang.py", line 71
    print tml.progress_report(t0, len(filepaths), i)
            ^
SyntaxError: invalid syntax

Compiling './bin/tml-filter-raw.py'...
***   File "./bin/tml-filter-raw.py", line 53
    print tml.progress_report(t0, len(filepaths), i)
            ^
SyntaxError: invalid syntax

Compiling './bin/tml-generate-features.py'...
***   File "./bin/tml-generate-features.py", line 91
    print p
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/tml-hstack.py'...
***   File "./bin/tml-hstack.py", line 26
    print 'Stacking...',
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/tml-preprocess.py'...
***   File "./bin/tml-preprocess.py", line 94
    print tml.progress_report(t0, len(filepaths), i)
            ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/scikit_learn-0.19.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sklearn'...
Listing './lib/python3.5/site-packages/sklearn/__check_build'...
Listing './lib/python3.5/site-packages/sklearn/_build_utils'...
Listing './lib/python3.5/site-packages/sklearn/cluster'...
Listing './lib/python3.5/site-packages/sklearn/cluster/tests'...
Listing './lib/python3.5/site-packages/sklearn/covariance'...
Listing './lib/python3.5/site-packages/sklearn/covariance/tests'...
Listing './lib/python3.5/site-packages/sklearn/cross_decomposition'...
Listing './lib/python3.5/site-packages/sklearn/cross_decomposition/tests'...
Listing './lib/python3.5/site-packages/sklearn/datasets'...
Listing './lib/python3.5/site-packages/sklearn/datasets/data'...
Listing './lib/python3.5/site-packages/sklearn/datasets/descr'...
Listing './lib/python3.5/site-packages/sklearn/datasets/images'...
Listing './lib/python3.5/site-packages/sklearn/datasets/tests'...
Listing './lib/python3.5/site-packages/sklearn/datasets/tests/data'...
Listing './lib/python3.5/site-packages/sklearn/decomposition'...
Listing './lib/python3.5/site-packages/sklearn/decomposition/tests'...
Listing './lib/python3.5/site-packages/sklearn/ensemble'...
Listing './lib/python3.5/site-packages/sklearn/ensemble/tests'...
Listing './lib/python3.5/site-packages/sklearn/externals'...
Listing './lib/python3.5/site-packages/sklearn/externals/joblib'...
Listing './lib/python3.5/site-packages/sklearn/feature_extraction'...
Listing './lib/python3.5/site-packages/sklearn/feature_extraction/tests'...
Listing './lib/python3.5/site-packages/sklearn/feature_selection'...
Listing './lib/python3.5/site-packages/sklearn/feature_selection/tests'...
Listing './lib/python3.5/site-packages/sklearn/gaussian_process'...
Listing './lib/python3.5/site-packages/sklearn/gaussian_process/tests'...
Listing './lib/python3.5/site-packages/sklearn/linear_model'...
Listing './lib/python3.5/site-packages/sklearn/linear_model/tests'...
Listing './lib/python3.5/site-packages/sklearn/manifold'...
Listing './lib/python3.5/site-packages/sklearn/manifold/tests'...
Listing './lib/python3.5/site-packages/sklearn/metrics'...
Listing './lib/python3.5/site-packages/sklearn/metrics/cluster'...
Listing './lib/python3.5/site-packages/sklearn/metrics/cluster/tests'...
Listing './lib/python3.5/site-packages/sklearn/metrics/tests'...
Listing './lib/python3.5/site-packages/sklearn/mixture'...
Listing './lib/python3.5/site-packages/sklearn/mixture/tests'...
Listing './lib/python3.5/site-packages/sklearn/model_selection'...
Listing './lib/python3.5/site-packages/sklearn/model_selection/tests'...
Listing './lib/python3.5/site-packages/sklearn/neighbors'...
Listing './lib/python3.5/site-packages/sklearn/neighbors/tests'...
Listing './lib/python3.5/site-packages/sklearn/neural_network'...
Listing './lib/python3.5/site-packages/sklearn/neural_network/tests'...
Listing './lib/python3.5/site-packages/sklearn/preprocessing'...
Listing './lib/python3.5/site-packages/sklearn/preprocessing/tests'...
Listing './lib/python3.5/site-packages/sklearn/semi_supervised'...
Listing './lib/python3.5/site-packages/sklearn/semi_supervised/tests'...
Listing './lib/python3.5/site-packages/sklearn/svm'...
Listing './lib/python3.5/site-packages/sklearn/svm/tests'...
Listing './lib/python3.5/site-packages/sklearn/tests'...
Listing './lib/python3.5/site-packages/sklearn/tree'...
Listing './lib/python3.5/site-packages/sklearn/tree/tests'...
Listing './lib/python3.5/site-packages/sklearn/utils'...
Listing './lib/python3.5/site-packages/sklearn/utils/sparsetools'...
Listing './lib/python3.5/site-packages/sklearn/utils/sparsetools/tests'...
Listing './lib/python3.5/site-packages/sklearn/utils/tests'...
Listing './lib/python3.5/site-packages/sklearn-0.0.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/features_tests.py'...
***   File "./lib/python3.5/site-packages/tests/features_tests.py", line 202
    print X[i]
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/twistml'...
Listing './lib/python3.5/site-packages/twistml/evaluation'...
Listing './lib/python3.5/site-packages/twistml/features'...
Compiling './lib/python3.5/site-packages/twistml/features/combine.py'...
***   File "./lib/python3.5/site-packages/twistml/features/combine.py", line 75
    print "Combining Tweets"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/twistml/features/countvector_transformer.py'...
***   File "./lib/python3.5/site-packages/twistml/features/countvector_transformer.py", line 117
    print "Vectorizing...",
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/twistml/features/doc2vec_transformer.py'...
***   File "./lib/python3.5/site-packages/twistml/features/doc2vec_transformer.py", line 107
    print "Vectorizing...",
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/twistml/features/sentiment_transformer.py'...
***   File "./lib/python3.5/site-packages/twistml/features/sentiment_transformer.py", line 81
    print "Vectorizing...",
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/twistml/filtering'...
Listing './lib/python3.5/site-packages/twistml/filtering/ldig'...
Compiling './lib/python3.5/site-packages/twistml/filtering/ldig/da.py'...
***   File "./lib/python3.5/site-packages/twistml/filtering/ldig/da.py", line 20
    raise Exception, "list has not ascent order at %d" % (i+1)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twistml/filtering/ldig/ldig.py'...
***   File "./lib/python3.5/site-packages/twistml/filtering/ldig/ldig.py", line 72
    print "labels: %d" % len(labels)
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/twistml/filtering/ldig/modeldata'...
Listing './lib/python3.5/site-packages/twistml/preprocessing'...
Listing './lib/python3.5/site-packages/twistml/targets'...
Listing './lib/python3.5/site-packages/twistml/utility'...
Listing './lib/python3.5/site-packages/twistml-0.9.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
